--- a/authentication-system-with-df-detection/src/app/globals.css
+++ b/authentication-system-with-df-detection/src/app/globals.css
@@ -5,16 +5,9 @@
   --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #035974;
     --foreground: #ededed;
   }
 }
@@ -23,4 +16,8 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+button {
+  transition: background 0.2s ease;
 }
