--- a/authentication-system-with-df-detection/src/app/styles/lettering.css
+++ b/authentication-system-with-df-detection/src/app/styles/lettering.css
@@ -1,7 +1,7 @@
 h1 {
   font-size: var(--fs-xl);
   font-weight: bold;
-  color: var(--col-primary-10);
+  color: var(--col-primary);
   padding-bottom: 20px;
 }
 h2 {
@@ -27,6 +27,6 @@ h4 {
 p {
   font-size: var(--fs-base);
   font-weight: 500;
-  color: black;
-  padding: 10px;
+  color: rgb(255, 255, 255);
+  padding: 15px;
 }
